Thu Mar 12 09:30:54 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (RUBY_CHECK_SIZEOF): if same size type is found, no
	  more calculation is needed.

	* configure.in (RUBY_DEFINT): falls back to RUBY_CHECK_SIZEOF if
	  size is not immediate.

Thu Mar 12 09:24:24 2009  Tanaka Akira  <akr@fsij.org>

	* transcode_data.h: suppress warnings of overflow.

Thu Mar 12 09:15:14 2009  Tanaka Akira  <akr@fsij.org>

	* include/ruby/encoding.h: suppress warnings of overflow.

Thu Mar 12 05:49:05 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (warnflags): added some default flags,
	  pointer-arith, write-strings and shorten-64-to-32, but suppress
	  unused-parameter and missing-field-initializers, if possible.

	* configure.in (RUBY_CHECK_HUGE): checks whether a value range is
	  larger than long.

	* file.c (rb_stat_blocks): struct stat.st_blocks may be larger
	  than long.

	* io.c (copy_stream_fallback_body): off_t may be larger than long.

	* iseq.c (rb_iseq_disasm): RSTRING_LEN() returns long.

	* process.c (rb_f_sleep): time() needs time_t.

	* random.c (fill_random_seed): enclosed conditionally used
	  variables.

	* thread_pthread.c (ruby_init_stack): range of rlim_cur may be
	  larger than int.

	* missing/vsnprintf.c (BSD_vfprintf): commented out code which has
	  no effect at all.

Thu Mar 12 02:10:57 2009  Tanaka Akira  <akr@fsij.org>

	* configure.in: strip spaces from ruby_version.
	  Sun C 5.9 SunOS_i386 Build47_dlight 2007/05/22 generates
	  `ruby_version= 1 "." 9 "." 1'.

Thu Mar 12 01:18:09 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* dir.c (dir_seek): use long for seekdir().

Thu Mar 12 01:08:27 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* tool/ytab.sed: replaces backslashes with slash for nmake.

Wed Mar 11 21:23:06 2009  Tanaka Akira  <akr@fsij.org>

	* time.c (time_mload): don't clear tm_mday.

Wed Mar 11 20:13:38 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>
